kubernetes/metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metrics-service
  labels:
    app: metrics-api
spec:
  type: ClusterIP
  selector:
    app: metrics-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
